src/components/Products/Products.module.scss
@import "./../../assets/styles/variables.scss";

.productList {
	position: relative;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	width: calc(100% - 5rem);

	margin-left: 1.75rem;
	padding-left: 3rem;

	border-left: 1px solid var(--overlay-background-color);

	scroll-margin-top: 6rem;

	@media (prefers-color-scheme: light) {
		border-left: 1px solid var(--silver);
	}

	&::before {
		content: " ";
		width: 9px;
		height: 9px;
		display: block;
		background-color: var(--overlay-background-color);
		border-radius: 100%;

		position: absolute;
		left: -5px;
		top: 0;

		@media (prefers-color-scheme: light) {
			background-color: var(--silver);
		}
	}

	&::after {
		content: " ";
		width: 9px;
		height: 9px;
		display: block;
		background-color: var(--overlay-background-color);
		border-radius: 100%;

		position: absolute;
		left: -5px;
		bottom: 0;

		@media (prefers-color-scheme: light) {
			background-color: var(--silver);
		}
	}
}

.productListTitle {
	display: block;
	font-family: var(--title-font-family);
	font-weight: bold;
	font-size: 1.5rem;
	margin-block-start: 0.83em;
	margin-block-end: 0.83em;
	margin-inline-start: 0px;
	margin-inline-end: 0px;
	color: var(--title-color);

	position: -webkit-sticky;
	position: sticky;
	top: 0px;
	background-color: var(--background-color);
	padding: 1rem 0;
	margin-top: 3rem;
	width: 60px;
	z-index: 1;
}

.product {
	width: 100%;
	margin-bottom: 5rem;
	line-height: 1.4;

	@media (min-width: $breakpoint-tablet) {
		width: 30%;
	}

	@media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
		width: 47%;
	}
}

.name {
	margin-bottom: 0;
	display: flex;
	align-items: flex-start;
	font-size: 1.17rem;
}

.metaData {
	margin-top: 1rem;
	margin-bottom: 1.5rem;
	cursor: default;

	display: flex;
	flex-direction: row;
	align-items: flex-start;
}

.tag {
	display: inline-flex;
	margin-right: 0.5rem;

	color: var(--font-color);
	background-color: var(--overlay-background-color);
	text-transform: uppercase;
	text-align: center;
	font-weight: bold;
	font-size: 0.85rem;
	line-height: 1.05rem;
	letter-spacing: 0.5px;

	height: 1rem;

	padding: 0.15rem 0.5rem;
	border-width: 1px;
	border-style: solid;
	border-color: var(--overlay-background-color);
	border-radius: 30px;

	&.hardware {
		font-size: 0.7rem;
		line-height: 1.05rem;
		background-color: var(--green);
		border-color: var(--green);
		color: var(--white);

		@media (prefers-color-scheme: dark) {
			background-color: transparent;
			border-color: var(--light-green);
			color: var(--light-green);
		}
	}

	&.software {
		font-size: 0.7rem;
		line-height: 1.05rem;
		background-color: var(--purple);
		border-color: var(--purple);
		color: var(--white);

		@media (prefers-color-scheme: dark) {
			background-color: transparent;
			border-color: var(--light-purple);
			color: var(--light-purple);
		}
	}

	&.service {
		font-size: 0.7rem;
		line-height: 1.05rem;
		background-color: var(--light-yellow);
		border-color: var(--light-yellow);
		color: var(--orange);

		@media (prefers-color-scheme: dark) {
			background-color: transparent;
			border-color: var(--light-orange);
			color: var(--light-orange);
		}
	}

	&.app {
		font-size: 0.7rem;
		line-height: 1.05rem;
		background-color: var(--red);
		border-color: var(--red);
		color: var(--white);

		@media (prefers-color-scheme: dark) {
			background-color: transparent;
			border-color: var(--light-red);
			color: var(--light-red);
		}
	}
}

.articleCard {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	border-radius: 5px;
	padding: 1.5rem;
	margin-top: 3rem;
	margin-bottom: 5rem;
	margin-left: 4rem;
	background-color: var(--overlay-background-color);
	width: calc(100% - 8rem);
	color: var(--overlay-font-color);
	box-sizing: border-box;

	transition-duration: 0.15s;
	transition-property: all;
	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);

	position: relative;
	z-index: 3;

	@media (max-width: $breakpoint-tablet) {
		width: 100%;
		margin-left: 0px;
	}

	&:hover {
		color: var(--overlay-font-color);
		transform: translate(0, 0) rotate(0) skewX(0) skewY(0) scaleX(1.05)
			scaleY(1.05);

		.title {
			color: var(--link-color);
			transition: all 200ms;
		}

		.readMore .readMoreArrow {
			transform: translateX(0.75rem);
			opacity: 1;
			transition: all 500ms;
		}
	}

	.title {
		margin-top: 0;
		margin-bottom: 1.5rem;
	}

	.description {
		margin-bottom: 1.5rem;
	}

	.readMore {
		display: flex;
		align-items: center;
		font-weight: bold;
		font-family: var(--title-font-family);
		letter-spacing: 0.5px;
		margin-bottom: 0;
		padding-bottom: 0;

		.readMoreArrow {
			margin-left: 0.5rem;
			opacity: 0;
		}
	}
}

